--- a/style.css
+++ b/style.css
@@ -1,25 +1,16 @@
+
+
 #container {
   display: grid;
-  width: 500px;
-  height: 500px;
-  border: 2px solid #2a9d8f;
-  }
+  height: 600px;
+  width: 600px;
+  border: 10px solid rgba(128, 128, 128, 0.433);
+  border-radius: 1%;
 
-button,
-#color-input {
-    cursor: pointer;
 }
+
+
 
 .grid-lines {
   outline: 1px solid #e5e5e5;
 }
-
-.random {
-  background-color: pink;
-}
-
-.active {
-  background-color: green;
-}
-
-
