--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1.5em;
+  padding-bottom: 50px;
 }
 
 header {
@@ -261,6 +262,7 @@ input[type="range"] {
   font-weight: 600;
   background-color: transparent;
   transition: 0.3s;
+  margin-bottom: 40px
 }
 
 #clear:hover,
@@ -294,8 +296,8 @@ input[type="range"] {
 @media (min-width: 860px) {
 
   header {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 6.5em;
   }
 
@@ -312,6 +314,11 @@ input[type="range"] {
     font-weight: 600;
   }
 
+  .line-switch {
+    gap: 15px;
+  }
+  
+
   .pen-bg {
     gap: 15px;
   }
@@ -326,7 +333,7 @@ input[type="range"] {
 
 
   .color-setting {
-    gap: 18px;
+    gap: 15px;
     order: 2;
   }
 
@@ -336,7 +343,7 @@ input[type="range"] {
   }
 
   .radio-button {
-    gap: 20px;
+    gap: 15px;
   }
 
   .grid-clear {
@@ -356,6 +363,8 @@ input[type="range"] {
   #clear2 {
     display: block;
     margin: 0;
+    padding-left: 3.2em;
+    padding-right: 3.2em;
   }
 
 
