--- a/style.css
+++ b/style.css
@@ -1,46 +1,3 @@
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-textarea,
-p,
-blockquote,
-th,
-td,
-hr,
-button,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  margin: 0;
-  padding: 0;
-}
-
-
 /* Style the rainbow text element. */
 .rainbow-text {
   /* Create a conic gradient. */
@@ -136,6 +93,12 @@ header {
   padding-top: 5%;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
+
 .main-content {
   display: flex;
   flex-direction: column;
@@ -192,7 +155,6 @@ input[type="color"]::-webkit-color-swatch {
   display: flex;
   gap: 5px;
 }
-
 
 .radio-setting {
   display: flex;
@@ -280,7 +242,6 @@ input[type="range"] {
   display: none;
 }
 
-
 @media (min-width: 720px) {
   header {
     font-size: 4em;
@@ -318,7 +279,7 @@ input[type="range"] {
   .line-switch {
     gap: 15px;
   }
-  
+
 
   .pen-bg {
     gap: 15px;
@@ -367,7 +328,6 @@ input[type="range"] {
     padding-left: 3.2em;
     padding-right: 3.2em;
   }
-
 
   #container {
     height: 550px;
